--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.42",
+    "@types/react-dom": "^17.0.14",
     "axios": "^0.21.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -19,6 +23,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "typescript": "^4.6.2",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.9"
   },
