--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.49.11",
     "typescript": "^4.6.2",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.9"
